<resources>

    <string name="app_name">Coursewatch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logoContentDesc">Logo</string>

    <string name="emailHint">Email</string>
    <string name="passHint">Password</string>

    <string name="passConfHint">Confirm Password</string>
    <string name="nameHint">Name</string>
    <string name="telHint">Phone number</string>
    <string name="collegeHint">College:</string>

    <string name="loginActionText">Login</string>
    <string name="signupLinkText">No account yet? Sign up</string>
    <string name="signupActionText">Sign up</string>
    <string name="logoutActionText">Logout</string>

    <string name="err_40x_name">Please enter your name</string>

    <string name="err_400_tel">Please enter your phone number</string>
    <string name="err_400_email">Please enter your email address</string>
    <string name="err_400_pass_signup">Please enter a password</string>
    <string name="err_400_pass_login">Please enter your password</string>
    <string name="err_400_passConf">Please confirm your password</string>

    <string name="err_401_email_pass">Email/password is incorrect</string>
    <string name="err_401_time">Account is temporarily locked out</string>

    <string name="err_403_tel">Please enter a valid phone number</string>
    <string name="err_403_email">Please enter a valid email address</string>
    <string name="err_403_passConf">Passwords do not match</string>

    <string name="err_406_email">This email is already in use</string>

    <string name="login_progress">Logging you in&#8230;</string>
    <string name="login_error">An unexpected error occurred during authentication.</string>

    <string name="signup_progress">Signing up&#8230;</string>
    <string name="signup_successful">Signup successful. Please check your inbox for a verification email.</string>
    <string name="signup_error">An unexpected error occurred during signup.</string>

    <string name="loading_progress">Loading&#8230;</string>
    <string name="unexpected_error">An unexpected error occurred. Please try again.</string>

</resources>
